ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/amsadt_ActivityTableCustomFilter__mdt.object-meta.xml
<CustomObject>
    <description>Setting up custom filters for activity table</description>
    <label>Activity Table Custom Filter</label>
    <pluralLabel>Activity Table Custom Filters</pluralLabel>
</CustomObject>