ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/fields/amsadt_ActivityTableSetting__c.field-meta.xml
<CustomField>
    <fullName>amsadt_ActivityTableSetting__c</fullName>
    <description>It is the related Activity table for an Activity Custom Filter</description>
    <label>ADT Activity Table Setting</label>
    <referenceTo>amsadt_ActivityTableSetting__mdt</referenceTo>
    <relationshipLabel>Activity Table Custom Filters</relationshipLabel>
    <relationshipName>Activity_Table_Custom_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>