ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/fields/amsadt_FilterFieldName__c.field-meta.xml
<CustomField>
    <fullName>amsadt_FilterFieldName__c</fullName>
    <description>It is the field name in LWC</description>
    <label>Filter Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>