ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/fields/amsadt_FilterPlaceholder__c.field-meta.xml
<CustomField>
    <fullName>amsadt_FilterPlaceholder__c</fullName>
    <description>It is used in showing the Placeholder for custom filters</description>
    <label>Filter Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>