ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/fields/amsadt_FilterSortOrder__c.field-meta.xml
<CustomField>
    <fullName>amsadt_FilterSortOrder__c</fullName>
    <description>It is to determine the ordering of custom filters to be shown in display</description>
    <label>Filter Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>