ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/fields/amsadt_ObjectField__c.field-meta.xml
<CustomField>
    <fullName>amsadt_ObjectField__c</fullName>
    <description>It is the field in Activity object to be used in filter</description>
    <label>Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>