ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/fields/amsadt_ObjectFieldAlias__c.field-meta.xml
<CustomField>
    <fullName>amsadt_ObjectFieldAlias__c</fullName>
    <description>It is an alias used in query to determine in aggregate result</description>
    <label>Object Field Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>