ams-activity-datatable/main/default/objects/amsadt_ActivityTableCustomFilter__mdt/fields/amsadt_ObjectFieldId__c.field-meta.xml
<CustomField>
    <fullName>amsadt_ObjectFieldId__c</fullName>
    <description>It is used if the query is using an ID as filter for example CreatedById</description>
    <label>Object Field Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>